   - Updated intltool utilities to version 0.32.1
   - Ported local and distant mailbox detection code from 2.0.3 to 2.1.0
   - Decoding of quotedprintable encoded mails (IMAP4)
   - Error message for mails in unknown enoding (IMAP4)
   - Bugfix: base64 decoding now rejects invalid encoded strings
   - New source files for decoding and converting

Version 2.0.3
  * Roland Stigge:
    - Updated man page (section 1, "GTK+")
  * Robert Sowada:
    - Changed version to 2.0.3
    - Various small changes and bugfixes
    - Updated german translation, updated po files
    - Gnome version can determine itself if in standalone mode or panel mode
    - Removed "--gtk" option, added "--applet" option in debug mode instead
    - Added "--version" option to all versions of gnubiff
    - "--help" option handled by "poptPrintHelp" in all versions of gnubiff
    - Removed messages that are no longer necessary
    - Bugfix: return value of main
    - Output of "--help" restructured
    - Code for saving the configuration file cleaned up
    - Bugfix: Autodetection of IMAP
    - Bugfix: Failure of select command (IMAP)
    - Bugfix: Failure of opening connection (IMAP)
    - Security Bugfix: DoS attacks by sending unterminated lines anticipated
      (if SSL is used, this was fixed for non-SSL connections in 2.0.2)
    - Bugfix: Handling network writing/reading errors
    - Bugfix/Feature: Support for international Mailbox names for IMAP
    - Security Bugfix: DoS attacks by sending a unterminated response to the
      SELECT, SEARCH, FETCH (IMAP) and TOP (POP3) commands anticipated
    - Bugfix: User set value for maximum number of mail to be collected is now
      respected (IMAP)
    - Bugfix: Fetching mails is no longer stopped if certain strings are in
      mail or mail header (IMAP)
    - Bugfix: First lines of email content are now displayed (IMAP)
    - Bugfix: Displaying mails that do not end with a newline (IMAP)